--- a/py/manifest.json
+++ b/py/manifest.json
@@ -1,7 +1,10 @@
 {
     "name":"Python Search",
+    "manifest_version":2, 
     "description":"Adds support to the omnibox to search Python reference documentation.",
-    "background_page":"background.html",
+     "background":{
+       "scripts":[ "background.js" ]
+    },
     "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
     "omnibox":{"keyword":"py"},
     "permissions":[
@@ -12,5 +15,5 @@
         "*://matplotlib.sourceforge.net/",
         "*://pylonshq.com/"
     ],
-    "version":"2.0"
+    "version":"2.1.0"
 }
