Index being produced in a format that the client side can comprehend.

--- a/src/client/as3/manifest.json
+++ b/src/client/as3/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version" : 2, 
   "description" : "Adds support to the omnibox to search the AS3 reference docs.",
   "background" : {
-     "scripts":[ "background.js" ]
+     "scripts":[ "index.js", "background.js" ]
   },
   "icons": { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
   "omnibox":{ "keyword":"as3" },
