Made common files common across server/client.

--- a/src/client/as3/manifest.json
+++ b/src/client/as3/manifest.json
@@ -8,8 +8,7 @@
   "icons": { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
   "omnibox":{ "keyword":"as3" },
   "permissions":[ 
-    "tabs",
-    "*://help.adobe.com/"
+    "tabs"
   ],
-  "version":"3.0.0"
+  "version":"3.0.1"
 }
