--- a/src/client/php/manifest.json
+++ b/src/client/php/manifest.json
@@ -1,13 +1,15 @@
 {
     "name":"PHP Search",
+    "manifest_version" : 2, 
     "description":"Adds support to the omnibox to search the PHP reference docs.",
-    "background_page":"background.html",
+    "background" : {
+         "scripts":[ "String.js", "index.js", "background.js" ]
+    },
     "options_page":"options.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
+    "icons":{"128":"icons/icon128.png", "32":"icons/icon32.png", "16":"icons/icon16.png"},
     "omnibox":{"keyword":"php"},
     "permissions":[
-        "tabs",
-        "*://*.php.net/"
+        "tabs"
     ],
-    "version":"2.1"
+    "version":"3.0.0"
 }
