--- a/src/client/php/manifest.json
+++ b/src/client/php/manifest.json
@@ -9,7 +9,8 @@
     "icons":{"128":"icons/icon128.png", "32":"icons/icon32.png", "16":"icons/icon16.png"},
     "omnibox":{"keyword":"php"},
     "permissions":[
-        "tabs"
+        "tabs",
+        "http://www.php.net/"
     ],
     "version":"3.0.0"
 }
