php. minimal viable release - with initial check to determine appropriate mirror.

--- a/src/client/php/manifest.json
+++ b/src/client/php/manifest.json
@@ -3,7 +3,7 @@
     "manifest_version" : 2, 
     "description":"Adds support to the omnibox to search the PHP reference docs.",
     "background" : {
-         "scripts":[ "String.js", "index.js", "background.js" ]
+         "scripts":[ "String.js", "index.js", "getMirror.js", "background.js" ]
     },
     "options_page":"options.html",
     "icons":{"128":"icons/icon128.png", "32":"icons/icon32.png", "16":"icons/icon16.png"},
