--- a/src/client/java/manifest.json
+++ b/src/client/java/manifest.json
@@ -1,13 +1,16 @@
 {
     "name":"Java API Search",
+    "manifest_version" : 2, 
     "description":"Adds support to the omnibox to search within the Java API.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"java"},
+     "background" : {
+         "scripts":[ "String.js", "index.js", "background.js" ]
+    },
+    "icons":{ "128":"icon128.png", "32":"icon32.png", "16":"icon16.png" },
+    "omnibox":{ "keyword":"java" },
     "permissions":[
         "tabs",
         "http://docs.oracle.com/",
         "https://docs.oracle.com/"
     ],
-    "version":"3.1"
+    "version":"3.2.0"
 }
