Made all outstanding manifest files compatable with manifest version 2.

--- a/src/client/droid/manifest.json
+++ b/src/client/droid/manifest.json
@@ -1,7 +1,10 @@
 {
-    "name":"Android™ API Search",
-    "description":"Adds support to the omnibox to search the Android API.",
-    "background_page":"background.html",
+    "name" : "Android™ API Search",
+    "description" : "Adds support to the omnibox to search the Android API.",
+     "manifest_version" : 2, 
+    "background" : {
+         "scripts":[ "background.js" ]
+    },
     "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
     "omnibox":{"keyword":"droid"},
     "permissions":[
