--- a/src/client/gwt/manifest.json
+++ b/src/client/gwt/manifest.json
@@ -1,12 +1,15 @@
 {
-    "name":"Web Toolkit™ API Search",
-    "description":"Adds support to the omnibox to search within the Google Web Toolkit™ API.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"gwt"},
+    "name" : "Web Toolkit™ API Search",
+    "description" : "Adds support to the omnibox to search within the Google Web Toolkit™ API.",
+    "manifest_version" : 2, 
+    "background" : {
+         "scripts" : [ "background.js" ]
+    },
+    "icons" : { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
+    "omnibox":{ "keyword" : "gwt" },
     "permissions":[
         "tabs",
         "*://google-web-toolkit.googlecode.com/"
     ],
-    "version":"3.1"
+    "version" : "3.2"
 }
