--- a/src/client/py/manifest.json
+++ b/src/client/py/manifest.json
@@ -1,19 +1,25 @@
 {
-    "name":"Python Search",
-    "manifest_version":2, 
-    "description":"Adds support to the omnibox to search Python reference documentation.",
-     "background":{
-       "scripts":[ "background.js" ]
-    },
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"py"},
-    "permissions":[
-        "tabs",
-        "*://docs.python.org/",
-        "*://docs.scipy.org/",
-        "*://docs.sympy.org/",
-        "*://matplotlib.sourceforge.net/",
-        "*://pylonshq.com/"
-    ],
-    "version":"2.1.0"
+	"name" : "Python Search",
+	"manifest_version" : 2,
+	"description" : "Adds support to the omnibox to search Python reference documentation.",
+	"background" : {
+		"scripts" : [ "background.js" ]
+	},
+	"icons" : {
+		"128" : "icon128.png",
+		"32" : "icon32.png",
+		"16" : "icon16.png"
+	},
+	"omnibox" : {
+		"keyword" : "py"
+	},
+	"permissions" : [ 
+		"tabs", 
+		"*://docs.python.org/", 
+		"*://docs.scipy.org/", 
+		"*://docs.sympy.org/", 
+		"*://matplotlib.sourceforge.net/", 
+		"*://pylonshq.com/"
+	],
+	"version" : "2.1.0"
 }
