--- a/src/client/as3b/manifest.json
+++ b/src/client/as3b/manifest.json
@@ -1,12 +1,15 @@
 {
-    "name":"ActionScript 3.0 Beta Search",
+    "name" : "ActionScript 3.0 Beta Search",
     "description":"Adds support to the omnibox to search the AS3 Beta reference docs.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"as3b"},
-    "permissions":[
+    "manifest_version" : 2, 
+	"background" : {
+         "scripts":[ "background.js" ]
+    },
+    "icons" : { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
+    "omnibox" : { "keyword" : "as3b" },
+    "permissions" : [
         "tabs",
         "*://help.adobe.com/"
     ],
-    "version":"1.0"
+    "version":"2.0"
 }
