--- a/src/client/boost/manifest.json
+++ b/src/client/boost/manifest.json
@@ -1,12 +1,16 @@
 {
-    "name":"Boost API Search",
-    "description":"Adds support to the omnibox to search the Boost C++ Libraries.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"boost"},
+    "name" : "Boost API Search",
+    "manifest_version" : 2, 
+    "description" : "Adds support to the omnibox to search the Boost C++ Libraries.",
+   "background" : {
+     "scripts" : [ "background.js" ]
+     // "scripts" : [ "String.js", "index.js", "background.js" ]
+	},
+    "icons" : { "128" : "icons/icon128.png", "32" : "icons/icon32.png", "16" : "icons/icon16.png"},
+    "omnibox" : {"keyword":"boost"},
     "permissions":[
         "tabs",
         "*://*.boost.org/"
     ],
-    "version":"2.0"
+    "version":"2.0.0"
 }
