--- a/src/client/closure/manifest.json
+++ b/src/client/closure/manifest.json
@@ -1,12 +1,15 @@
 {
-    "name":"Closure™ API Search",
-    "description":"Adds support to the omnibox to search the Google Closure™ APIs.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"closure"},
-    "permissions":[
+    "name" : "Closure™ API Search",
+    "description" : "Adds support to the omnibox to search the Google Closure™ APIs.",
+    "manifest_version" : 2, 
+    "background" : {
+         "scripts":[ "background.js" ]
+    },
+    "icons" : { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
+    "omnibox" : { "keyword" : "closure" },
+    "permissions" : [
         "tabs",
         "*://closure-library.googlecode.com/"
     ],
-    "version":"2.0"
+    "version" : "2.0"
 }
