--- a/src/client/guava/manifest.json
+++ b/src/client/guava/manifest.json
@@ -1,12 +1,15 @@
 {
-    "name":"Guava™ API Search",
-    "description":"Adds support to the omnibox to search within the Guava™ API.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"guava"},
-    "permissions":[
+    "name" : "Guava™ API Search",
+    "description" : "Adds support to the omnibox to search within the Guava™ API.",
+    "manifest_version" : 2, 
+    "background" : {
+         "scripts" : [ "background.js" ]
+    },
+    "icons" : { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
+    "omnibox" : { "keyword" : "guava" },
+    "permissions" : [
         "tabs",
         "*://guava-libraries.googlecode.com/"
     ],
-    "version":"2.1"
+    "version" : "2.2"
 }
