--- a/src/client/matlab/manifest.json
+++ b/src/client/matlab/manifest.json
@@ -1,12 +1,21 @@
 {
-    "name":"Matlab API Search",
-    "description":"Adds support to the omnibox to search the Matlab API.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"matlab"},
-    "permissions":[
-        "tabs",
-        "http://www.mathworks.com/"
-    ],
-    "version":"2.0"
+	"name" : "Matlab API Search",
+	"description" : "Adds support to the omnibox to search the Matlab API.",
+	"manifest_version" : 2,
+	"background" : {
+		"scripts" : [ "background.js" ]
+	},
+	"icons" : {
+		"128" : "icon128.png",
+		"32" : "icon32.png",
+		"16" : "icon16.png"
+	},
+	"omnibox" : {
+		"keyword" : "matlab"
+	},
+	"permissions" : [ 
+		"tabs", 
+		"http://www.mathworks.com/" 
+	],
+	"version": "2.1"
 }
