--- a/src/client/pygdata/manifest.json
+++ b/src/client/pygdata/manifest.json
@@ -1,12 +1,21 @@
 {
-    "name":"PyGData API Search",
-    "description":"Adds support to the omnibox to search the GData API for Python.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"pygdata"},
-    "permissions":[
-        "tabs",
-        "*://gdata-python-client.googlecode.com/"
-    ],
-    "version":"2.0"
+	"name" : "PyGData API Search",
+	"description" : "Adds support to the omnibox to search the GData API for Python.",
+	"manifest_version" : 2,
+	"background" : {
+		"scripts" : [ "background.js" ]
+	},
+	"icons" : {
+		"128" : "icon128.png",
+		"32" : "icon32.png",
+		"16" : "icon16.png"
+	},
+	"omnibox" : {
+		"keyword" : "pygdata"
+	},
+	"permissions" : [
+		"tabs", 
+		"*://gdata-python-client.googlecode.com/"
+	],
+	"version" : "2.1"
 }
