--- a/src/client/rails/manifest.json
+++ b/src/client/rails/manifest.json
@@ -1,12 +1,21 @@
 {
-    "name":"Rails API Search",
-    "description":"Adds support to the omnibox to search the Rails API.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"rails"},
-    "permissions":[
-        "tabs",
-        "http://api.rubyonrails.org/"
-    ],
-    "version":"2.1"
+	"name" : "Rails API Search",
+	"description" : "Adds support to the omnibox to search the Rails API.",
+	"manifest_version" : 2, 
+    "background" : {
+         "scripts" : [ "background.js" ]
+    },
+	"icons" : {
+		"128" : "icon128.png",
+		"32" : "icon32.png",
+		"16" : "icon16.png"
+	},
+	"omnibox" : {
+		"keyword": "rails"
+	},
+	"permissions" : [
+		"tabs", 
+		"http://api.rubyonrails.org/
+	],
+	"version" : "2.2"
 }
