--- a/src/client/stl/manifest.json
+++ b/src/client/stl/manifest.json
@@ -1,12 +1,23 @@
 {
-    "name":"Standard Template Library",
-    "description":"Adds support to the omnibox to search the C++ STL.",
-    "background_page":"background.html",
-    "icons":{"128":"icon128.png", "32":"icon32.png", "16":"icon16.png"},
-    "omnibox":{"keyword":"stl"},
-    "permissions":[
-        "tabs",
-        "*://*.sgi.com/"
-    ],
-    "version":"2.0"
+	"name" : "Standard Template Library",
+	"description" : "Adds support to the omnibox to search the C++ STL.",
+	"manifest_version" : 2, 
+    "background" : {
+        "scripts" : [ 
+        	"background.js" 
+      	]
+    },
+	"icons" : {
+		"128" : "icon128.png",
+		"32" : "icon32.png",
+		"16" : "icon16.png"
+	},
+	"omnibox" : {
+		"keyword" : "stl"
+	},
+	"permissions" : [
+		"tabs", 
+		"*://*.sgi.com/"
+	],
+	"version": "2.1"
 }
