--- a/src/client/jee/manifest.json
+++ b/src/client/jee/manifest.json
@@ -3,14 +3,24 @@
     "description" : "Adds support to the omnibox to search the JavaEE API.",
     "manifest_version" : 2, 
     "background" : {
-         "scripts" : [ "background.js" ]
+         "scripts" : [ 
+         	"index.js",
+         	"String.js",
+         	"background.js" 
+         ]
     },
-    "icons" : { "128" : "icon128.png", "32" : "icon32.png", "16" : "icon16.png" },
-    "omnibox" : { "keyword" : "jee" },
+    "icons" : { 
+    	"128" : "icons/icon128.png", 
+    	"32" : "icons/icon32.png", 
+    	"16" : "icons/icon16.png" 
+    },
+    "omnibox" : { 
+    	"keyword" : "jee" 
+    },
     "permissions" : [
         "tabs",
         "http://docs.oracle.com/",
         "https://docs.oracle.com/"
     ],
-    "version":"2.2"
+    "version":"3.0.0"
 }
